#!/usr/bin/env python3

import grpc
from concurrent import futures
import logging
import time
import requests
import io
from PIL import Image as PILImage
from typing import List, Dict, Optional
import json
import hashlib
import base64
from pixivpy3 import AppPixivAPI


# Import generated protobuf classes (you'd generate these from the .proto file)
# python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. pixiv.proto
import pixiv_pb2
import pixiv_pb2_grpc

class PixivManagerServicer:
    """gRPC service implementation"""

    def __init__(self):
        logging.basicConfig(level=logging.INFO)
        self.logger = logging.getLogger(__name__)
        self.pixivClient = AppPixivAPI()
        self.pixivClient.auth(refresh_token="")# Add account for thing

    def ValidateAuth(self, request, context):
        api = AppPixivAPI()
        try:
            api.auth(refresh_token=request.refresh_token)
            context.set_code(grpc.StatusCode.OK)
            context.set_details("Authentication successful")
        except Exception as e:
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(str(e))
            return pixiv_pb2.ValidateAuthResponse(success=False)
        return pixiv_pb2.ValidateAuthResponse(success=True)

    def GetBookmarks(self, request, context):
        """Get user bookmarks with pagination"""
        api = AppPixivAPI()

        try:
            api.auth(refresh_token=request.refresh_token)
        except Exception as e:
            context.set_code(grpc.StatusCode.UNAUTHENTICATED)
            context.set_details(str(e))
            return None

        bookmarks = []
        try:
            bookmarks = api.user_bookmarks_illust(user_id=request.illust_id, restrict="public").illusts
            if request.include_private:
                bookmarks += api.user_bookmarks_illust(user_id=request.illust_id, restrict="private").illusts
        except Exception as e:
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(str(e))
            return None
        context.set_code(grpc.StatusCode.OK)
        return pixiv_pb2.GetBookmarksResponse(bookmarks=bookmarks)

    def GetImage(self, request, context):
        """Get image data for artwork"""
        try:


    def HealthCheck(self, request, context):
        """Health check endpoint"""
        return {"status": "healthy"}


def serve():
    """Start the gRPC server"""
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))

    # Add servicer to server (you'd use the actual protobuf generated class)
    # pixiv_pb2_grpc.add_PixivManagerServicer_to_server(PixivManagerServicer(), server)

    # For demonstration, we'll just create the servicer
    servicer = PixivManagerServicer()

    # Configure server
    listen_addr = '[::]:50052'
    server.add_insecure_port(listen_addr)

    # Start server
    server.start()
    logging.info(f"Server started, listening on {listen_addr}")
    server.wait_for_termination()


if __name__ == '__main__':
    serve()
